changed z-index to fix the ExitIcon position issue on the SelectHero pop_up_window

--- a/src/components/pop_up_window.css
+++ b/src/components/pop_up_window.css
@@ -71,12 +71,3 @@
     padding-right: 3%;
     padding-top: 3%;
 }
-
-.exit{
-    position: absolute;
-    height: 38px;
-    width: 38px;
-    top: 0px;
-    right: 0px;
-    /* margin-left: 80%; */
-}
